--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><front color = "red"></front><B>thơ xuân diệu</B></front></h1>
+    <h1><front color = "red"></front><B>thơ xuân quynh</B></front></h1>
     <b>chiều</b>
     <p>Hôm nay, trời nhẹ lên cao,<br>Tôi buồn không biết vì sao tôi buồn...</p>
     <p>Lá hồng rơi lặng gió thuôn,<br>Sương trình rơi kín từ nguồn yêu thương.</p>
